@@ -30,15 +30,12 @@
 #include <Eris/View.h>
 #include <Eris/Avatar.h>
 
-#if SIGC_MAJOR_VERSION == 1 && SIGC_MINOR_VERSION == 0
-#include <sigc++/signal_system.h>
-#else
-#include <sigc++/object.h>
-#include <sigc++/signal.h>
-#include <sigc++/slot.h>
-#include <sigc++/bind.h>
+// #include <sigc++/object.h>
+// #include <sigc++/signal.h>
+// #include <sigc++/slot.h>
+// #include <sigc++/bind.h>
 #include <sigc++/object_slot.h>
-#endif
+
 namespace Ember {
 
 /**
